updated affine registration code. consolidated preprocessing code

--- a/computing fiducial error.ipynb
+++ b/computing fiducial error.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,9 +22,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named Preprocessor",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-5609ecb68290>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mPreprocessor\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPreprocessor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mRegisterer\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRegisterer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSimpleITK\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msitk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mndreg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named Preprocessor"
+     ]
+    }
+   ],
    "source": [
     "from Preprocessor import Preprocessor\n",
     "from Registerer import Registerer\n",
@@ -37,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1594,7 +1606,9 @@
   {
    "cell_type": "code",
    "execution_count": 280,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1666,6 +1680,125 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = \"\"\"\n",
+    "196,166,47\n",
+    "192,244,89\n",
+    "89,309,88\n",
+    "72,270,72\n",
+    "25,266,71\n",
+    "32,255,71\n",
+    "72,361,53\n",
+    "168,402,77\n",
+    "314,53,67\n",
+    "375,28,47\n",
+    "333,98,53\n",
+    "119,117,37\n",
+    "87,204,82\n",
+    "96,169,82\n",
+    "124,86,30\n",
+    "144,173,47\n",
+    "282,101,28\n",
+    "143,60,34\n",
+    "255,33,50\n",
+    "157,305,60\n",
+    "132,192,78\n",
+    "15,181,84\n",
+    "193,13,60\n",
+    "104,196,52\n",
+    "70,120,91\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = csv.reader(file('cell_detection_3_final-2.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = []\n",
+    "for i in r:\n",
+    "#     print(i)\n",
+    "#     print(np.array(i, dtype='uint16'))\n",
+    "    x.append(np.array(i, dtype='uint16'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_list = np.array(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[196, 166,  47],\n",
+       "       [192, 244,  89],\n",
+       "       [ 89, 309,  88],\n",
+       "       [ 72, 270,  72],\n",
+       "       [ 25, 266,  71],\n",
+       "       [ 32, 255,  71],\n",
+       "       [ 72, 361,  53],\n",
+       "       [168, 402,  77],\n",
+       "       [314,  53,  67],\n",
+       "       [375,  28,  47],\n",
+       "       [333,  98,  53],\n",
+       "       [119, 117,  37],\n",
+       "       [ 87, 204,  82],\n",
+       "       [ 96, 169,  82],\n",
+       "       [124,  86,  30],\n",
+       "       [144, 173,  47],\n",
+       "       [282, 101,  28],\n",
+       "       [143,  60,  34],\n",
+       "       [255,  33,  50],\n",
+       "       [157, 305,  60],\n",
+       "       [132, 192,  78],\n",
+       "       [ 15, 181,  84],\n",
+       "       [193,  13,  60],\n",
+       "       [104, 196,  52],\n",
+       "       [ 70, 120,  91]], dtype=uint16)"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_list"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1674,11 +1807,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "link = \"https://viz.boss.neurodata.io/#!{'layers':{'control9,res3,rescaled':{'type':'image'_'source':'boss://https://api.boss.neurodata.io/control9_to_ara/daniel_reg/control9_res3_rescaled'_'opacity':0.5_'color':2}_'atlas,to,control9':{'type':'image'_'source':'boss://https://api.boss.neurodata.io/control9_to_ara/daniel_reg/atlas_to_control9'_'opacity':0.5_'color':5}}_'navigation':{'pose':{'position':{'voxelSize':[41280_41280_41280]_'voxelCoordinates':[248.32693481445312_125.8307876586914_80.39444732666016]}}_'zoomFactor':41280}_'perspectiveOrientation':[0.0009365863515995443_-0.008762896060943604_0.9997307658195496_0.021431967616081238]_'perspectiveZoom':377107.4582453634_'layout':'4panel'}\""
+    "link = \"https://viz.boss.neurodata.io/#!{'layers':{'Ch1':{'type':'image'_'source':'boss://https://api.boss.neurodata.io/ailey-dev/170726_Insula-vCapture-Atenolol2_00-56-01/Ch1?window=0,5000'_'opacity':0.5}}_'navigation':{'pose':{'position':{'voxelSize':[5160_5160_5160]_'voxelCoordinates':[1477.7669677734375_1258.2030029296875_965]}}_'zoomFactor':12456.58695107724}}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "replaced commas\n",
+      "source\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/ipykernel_launcher.py:28: DeprecationWarning: BaseException.message has been deprecated as of Python 2.6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://viz.boss.neurodata.io/#!{\"layers\": {\"Ch1\": {\"opacity\": 0.5, \"source\": \"boss://https://api.boss.neurodata.io/ailey-dev/170726_Insula-vCapture-Atenolol2_00-56-01/Ch1?window=0,5000\", \"type\": \"image\"}, \"manul_fiducials\": {\"points\": [[]], \"type\": \"pointAnnotation\"}}, \"navigation\": {\"pose\": {\"position\": {\"voxelCoordinates\": [1477.7669677734375, 1258.2030029296875, 965], \"voxelSize\": [5160, 5160, 5160]}}, \"zoomFactor\": 12456.58695107724}}'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_points_layer_to_viz_link(link, 'manul_fiducials')"
    ]
   },
   {
