--- a/ndreg_demo.ipynb
+++ b/ndreg_demo.ipynb
@@ -15,8 +15,7 @@
    "source": [
     "%matplotlib inline\n",
     "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
-    "matplotlib.rcParams['figure.figsize'] = (10.0, 8.0)"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -44,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = ndreg.imgRead('sample.png')"
+    "img = ndreg.imgRead('/work/ndreg/sample.png')"
    ]
   },
   {
@@ -84,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_transformed = ndreg.imgRead('sample_transformed.png')"
+    "img_transformed = ndreg.imgRead('/work/ndreg/sample_transformed.png')"
    ]
   },
   {
