--- a/ndreg_demo.ipynb
+++ b/ndreg_demo.ipynb
@@ -210,51 +210,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import skimage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rr, cc = skimage.draw.circle(100, 100, 25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "circle_image = np.zeros((200,200,2), dtype='float64')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "circle_image[rr, cc, :] = 1.0*np.random.randn(len(rr),2) + 40.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "circle_image = skimage.filters.gaussian(circle_image, sigma=25)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 160,
    "metadata": {},
    "outputs": [
@@ -342,6 +297,15 @@
    "outputs": [],
    "source": [
     "transform.SetDisplacementField(disp_field)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sitk.WriteTransform(transform, 'sample_displacement_field.txt')"
    ]
   },
   {
