update gif cell

--- a/image_processing_demo.ipynb
+++ b/image_processing_demo.ipynb
@@ -514,11 +514,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img align='center' src='output/tp1tp2.gif' width=\"500\"/> \n",
     "\n",
-    "</br>\n",
-    "Without processing, the intensity \n",
-    "<img align='center' src='output/tp1tp2_noprocess.gif' width=\"500\"/>"
+    "<p>\n",
+    "Without processing, there are high variations in intensity and there are very few aligned areas on the overlay images.\n",
+    "</p>\n",
+    "\n",
+    "<img align='left' src='output/tp1tp2.gif' width=\"500\"/> \n",
+    "\n",
+    "<img align='left' src='output/tp1tp2_noprocess.gif' width=\"500\"/>\n"
    ]
   },
   {
@@ -592,12 +595,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<p>\n",
+    "<img align='left' src='output/voxelerror12_noprocess.png'>\n",
+    "</p>\n",
     "Compare this with the MSE after registration without processing.\n",
-    "\n",
-    "![](output/voxelerror12_noprocess.png)\n",
     "\n",
     "Clearly processing helps a bunch -- the error before registration with processing is about the same as the error after registration without processing. Furthermore the MSE decreased by almost 3 orders of magnitude when comparing the post-registration images with and without processing. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
