small changes to notebook

--- a/ndreg_demo_real_data.ipynb
+++ b/ndreg_demo_real_data.ipynb
@@ -547,7 +547,9 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
